# ai-analysis-for-leetcode

./: .gitignore  .replit  .roomodes  Dockerfile  GQLQuery.py  LICENSE copy  README.md  SECURITY.md  app.py  data_formatter.py  netlify.toml  package.json  pyproject.toml  recommendations.py  render.yaml  replit.nix  requirements.txt  test_setup.py  vercel.json
.github/: dependabot.yml
.github/INITIAL_ISSUES/: 1_query_optimization.md  2_in_memory_caching.md  3_interactive_visualizations.md  4_dark_mode.md  5_add_type_hints.md  6_setup_guide.md  7_enhanced_statistics.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: main.yml  security.yml
api/: GQLQuery.py  app.py  test_server.py
api/templates/: index.html  results.html
core/: __init__.py
docs/: API_DOCS.md  api_doc_lc.md  api_optimization_plan.md  architecture_execution_roadmap.md  architecture_improvement_plan.md  architecture_integration_plan.md  architecture_security_addendum.md  current_code_leetcode_api.md  data_visualization_plan.md  design_system.md  doc.html  docker_netlify_deployment_plan.md  inmemory_optimization_plan.md  iteration2_plan.md  kubernetes_local_deployment.md  landing_page_design.md  leetcode_ai_insights.md  leetcode_profile_report.md  netlify_migration_plan.md  priority_areas_fix_plan.md  priority_areas_github_issue.md  problems_fetch_optimization.md  replit_deployment_plan.md  security-implementation-plan.md  ui_redesign_plan.md  weakest_topics_implementation_plan.md
templates/: index.html  results.html
(+21 files in other folders)
