[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "leetcode-analysis"
version = "1.0.0"
description = "LeetCode Profile Analysis Tool"
authors = [
    {name = "Rahul"}
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.3",
    "requests>=2.31.0",
    "aiohttp>=3.8.5",
    "asgiref>=3.7.2",
    "prometheus-client>=0.17.1",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "pydantic>=2.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
]
dev = [
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.1",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "pylint>=2.17.5",
]

[tool.setuptools]
py-modules = []